国家タグ関連コード自動追加

--- a/localisation/english/map/country_names/geacps_dependent_territory_names_CHI_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_CHI_l_english.yml
@@ -2598,8 +2598,6 @@
  TYU_CHI_autonomous_province_DEF: "the The Tyumenian Province"
  TYU_CHI_autonomous_province_ADJ: "$OVERLORD$ Tyumenian"
  
-<<<<<<< HEAD
-=======
  VNT_CHI_autonomous_military_clique: "Vientianaise Clique"
  VNT_CHI_autonomous_military_clique_DEF: "the The Vientianaise Clique"
  VNT_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ Vientianaise"
@@ -2607,7 +2605,6 @@
  VNT_CHI_autonomous_province_DEF: "the The Vientianaise Province"
  VNT_CHI_autonomous_province_ADJ: "$OVERLORD$ Vientianaise"
  
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  VAX_CHI_autonomous_military_clique: "Wa Clique"
  VAX_CHI_autonomous_military_clique_DEF: "the The Wa Clique"
  VAX_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ Wa"
@@ -2649,6 +2646,13 @@
  ZHI_CHI_autonomous_province: "Zhili Province"
  ZHI_CHI_autonomous_province_DEF: "the The Zhili Province"
  ZHI_CHI_autonomous_province_ADJ: "$OVERLORD$ Zhili"
+ 
+ SUL_CHI_autonomous_military_clique: "Sulu Clique"
+ SUL_CHI_autonomous_military_clique_DEF: "the The Sulu Clique"
+ SUL_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ Sulu"
+ SUL_CHI_autonomous_province: "Sulu Province"
+ SUL_CHI_autonomous_province_DEF: "the The Sulu Province"
+ SUL_CHI_autonomous_province_ADJ: "$OVERLORD$ Sulu"
  
 #ヨーロッパ:
  AEG_CHI_autonomous_military_clique: "Aegean Islander Clique"
@@ -3850,21 +3854,12 @@
  NAC_CHI_autonomous_province_DEF: "the The North American Province"
  NAC_CHI_autonomous_province_ADJ: "$OVERLORD$ North American"
  
-<<<<<<< HEAD
- NGL_CHI_autonomous_military_clique: " Clique"
- NGL_CHI_autonomous_military_clique_DEF: "the The  Clique"
- NGL_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ "
- NGL_CHI_autonomous_province: " Province"
- NGL_CHI_autonomous_province_DEF: "the The  Province"
- NGL_CHI_autonomous_province_ADJ: "$OVERLORD$ "
-=======
  NGL_CHI_autonomous_military_clique: "North Greenlandic Clique"
  NGL_CHI_autonomous_military_clique_DEF: "the The North Greenlandic Clique"
  NGL_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ North Greenlandic"
  NGL_CHI_autonomous_province: "North Greenlandic Province"
  NGL_CHI_autonomous_province_DEF: "the The North Greenlandic Province"
  NGL_CHI_autonomous_province_ADJ: "$OVERLORD$ North Greenlandic"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  PCZ_CHI_autonomous_military_clique: "Panama Canal Zone Clique"
  PCZ_CHI_autonomous_military_clique_DEF: "the The Panama Canal Zone Clique"
@@ -3943,21 +3938,12 @@
  SAC_CHI_autonomous_province_DEF: "the The South American Province"
  SAC_CHI_autonomous_province_ADJ: "$OVERLORD$ South American"
  
-<<<<<<< HEAD
- SGL_CHI_autonomous_military_clique: " Clique"
- SGL_CHI_autonomous_military_clique_DEF: "the The  Clique"
- SGL_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ "
- SGL_CHI_autonomous_province: " Province"
- SGL_CHI_autonomous_province_DEF: "the The  Province"
- SGL_CHI_autonomous_province_ADJ: "$OVERLORD$ "
-=======
  SGL_CHI_autonomous_military_clique: "South Greenlandic Clique"
  SGL_CHI_autonomous_military_clique_DEF: "the The South Greenlandic Clique"
  SGL_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ South Greenlandic"
  SGL_CHI_autonomous_province: "South Greenlandic Province"
  SGL_CHI_autonomous_province_DEF: "the The South Greenlandic Province"
  SGL_CHI_autonomous_province_ADJ: "$OVERLORD$ South Greenlandic"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  TOB_CHI_autonomous_military_clique: "Tobagonian Clique"
  TOB_CHI_autonomous_military_clique_DEF: "the The Tobagonian Clique"
@@ -4554,21 +4540,12 @@
  ZHELTUGA_CHI_autonomous_province_ADJ: "$OVERLORD$ Zheltuga "
  
 #ヨーロッパ
-<<<<<<< HEAD
- AEGandION_CHI_autonomous_military_clique: "Aegean and Ionian Clique"
- AEGandION_CHI_autonomous_military_clique_DEF: "the The Aegean and Ionian Clique"
- AEGandION_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ Aegean and Ionian"
- AEGandION_CHI_autonomous_province: "Aegean and Ionian Province"
- AEGandION_CHI_autonomous_province_DEF: "the The Aegean and Ionian Province"
- AEGandION_CHI_autonomous_province_ADJ: "$OVERLORD$ Aegean and Ionian"
-=======
  AEG-ION_CHI_autonomous_military_clique: "Aegean-Ionian Clique"
  AEG-ION_CHI_autonomous_military_clique_DEF: "the The Aegean-Ionian Clique"
  AEG-ION_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ Aegean-Ionian"
  AEG-ION_CHI_autonomous_province: "Aegean-Ionian Province"
  AEG-ION_CHI_autonomous_province_DEF: "the The Aegean-Ionian Province"
  AEG-ION_CHI_autonomous_province_ADJ: "$OVERLORD$ Aegean-Ionian"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  BYELORUSSIA_CHI_autonomous_military_clique: "Byelorussian Clique"
  BYELORUSSIA_CHI_autonomous_military_clique_DEF: "the The Byelorussian Clique"
@@ -4584,21 +4561,12 @@
  KAR-FIN_CHI_autonomous_province_DEF: "the The Karelo-Finnish Province"
  KAR-FIN_CHI_autonomous_province_ADJ: "$OVERLORD$ Karelo-Finnish"
  
-<<<<<<< HEAD
- SHLandHLS_CHI_autonomous_military_clique: "Schleswig and Holsteinian Clique"
- SHLandHLS_CHI_autonomous_military_clique_DEF: "the The Schleswig and Holsteinian Clique"
- SHLandHLS_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
- SHLandHLS_CHI_autonomous_province: "Schleswig and Holsteinian Province"
- SHLandHLS_CHI_autonomous_province_DEF: "the The Schleswig and Holsteinian Province"
- SHLandHLS_CHI_autonomous_province_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
-=======
  SHL-HLS_CHI_autonomous_military_clique: "Schleswig-Holsteinian Clique"
  SHL-HLS_CHI_autonomous_military_clique_DEF: "the The Schleswig-Holsteinian Clique"
  SHL-HLS_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
  SHL-HLS_CHI_autonomous_province: "Schleswig-Holsteinian Province"
  SHL-HLS_CHI_autonomous_province_DEF: "the The Schleswig-Holsteinian Province"
  SHL-HLS_CHI_autonomous_province_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_CHI_autonomous_military_clique: "Gold Coast Northern Territories Clique"
@@ -4625,21 +4593,12 @@
  
 #大洋州
  
-<<<<<<< HEAD
- KIRandTVL_CHI_autonomous_military_clique: "I-Kiribati and Tuvaluan Clique"
- KIRandTVL_CHI_autonomous_military_clique_DEF: "the The I-Kiribati and Tuvaluan Clique"
- KIRandTVL_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
- KIRandTVL_CHI_autonomous_province: "I-Kiribati and Tuvaluan Province"
- KIRandTVL_CHI_autonomous_province_DEF: "the The I-Kiribati and Tuvaluan Province"
- KIRandTVL_CHI_autonomous_province_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
-=======
  KIR-TVL_CHI_autonomous_military_clique: "I-Kiribati-Tuvaluan Clique"
  KIR-TVL_CHI_autonomous_military_clique_DEF: "the The I-Kiribati-Tuvaluan Clique"
  KIR-TVL_CHI_autonomous_military_clique_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
  KIR-TVL_CHI_autonomous_province: "I-Kiribati-Tuvaluan Province"
  KIR-TVL_CHI_autonomous_province_DEF: "the The I-Kiribati-Tuvaluan Province"
  KIR-TVL_CHI_autonomous_province_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  
 #アメリカ諸州
