--- a/localisation/english/map/country_names/geacps_dependent_territory_names_GER_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_GER_l_english.yml
@@ -5928,8 +5928,6 @@
  TYU_reichsland_DEF: "the The Reichsland Tyumen"
  TYU_reichsland_ADJ: "$OVERLORD$ Tyumenian"
  
-<<<<<<< HEAD
-=======
  VNT_reichsprotectorate: "Protektorat Vientiane"
  VNT_reichsprotectorate_DEF: "the The Protektorat Vientiane"
  VNT_reichsprotectorate_ADJ: "$OVERLORD$ Vientianaise"
@@ -5946,7 +5944,6 @@
  VNT_reichsland_DEF: "the The Reichsland Vientiane"
  VNT_reichsland_ADJ: "$OVERLORD$ Vientianaise"
  
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  VAX_reichsprotectorate: "Protektorat Wa"
  VAX_reichsprotectorate_DEF: "the The Protektorat Wa"
  VAX_reichsprotectorate_ADJ: "$OVERLORD$ Wa"
@@ -6042,6 +6039,22 @@
  ZHI_reichsland: "Reichsland Zhili"
  ZHI_reichsland_DEF: "the The Reichsland Zhili"
  ZHI_reichsland_ADJ: "$OVERLORD$ Zhili"
+ 
+ SUL_reichsprotectorate: "Protektorat Sulu"
+ SUL_reichsprotectorate_DEF: "the The Protektorat Sulu"
+ SUL_reichsprotectorate_ADJ: "$OVERLORD$ Sulu"
+ SUL_reichsgeneralgovernorate: "Generalgouvernement der Sulu"
+ SUL_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der Sulu"
+ SUL_reichsgeneralgovernorate_ADJ: "$OVERLORD$ Sulu"
+ SUL_reichskommissariat: "Reichskommissariat Sulu"
+ SUL_reichskommissariat_DEF: "the The Reichskommissariat Sulu"
+ SUL_reichskommissariat_ADJ: "$OVERLORD$ Sulu"
+ SUL_reichskolonie: "Reichskolonie Sulu"
+ SUL_reichskolonie_DEF: "the The Reichskolonie Sulu"
+ SUL_reichskolonie_ADJ: "$OVERLORD$ Sulu"
+ SUL_reichsland: "Reichsland Sulu"
+ SUL_reichsland_DEF: "the The Reichsland Sulu"
+ SUL_reichsland_ADJ: "$OVERLORD$ Sulu"
  
 #ヨーロッパ:
  AEG_reichsprotectorate: "Protektorat Aegean Islands"
@@ -8784,21 +8797,6 @@
  
  NGL_reichsprotectorate: "Protektorat North Greenland"
  NGL_reichsprotectorate_DEF: "the The Protektorat North Greenland"
-<<<<<<< HEAD
- NGL_reichsprotectorate_ADJ: "$OVERLORD$ "
- NGL_reichsgeneralgovernorate: "Generalgouvernement der North Greenland"
- NGL_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der North Greenland"
- NGL_reichsgeneralgovernorate_ADJ: "$OVERLORD$ "
- NGL_reichskommissariat: "Reichskommissariat North Greenland"
- NGL_reichskommissariat_DEF: "the The Reichskommissariat North Greenland"
- NGL_reichskommissariat_ADJ: "$OVERLORD$ "
- NGL_reichskolonie: "Reichskolonie North Greenland"
- NGL_reichskolonie_DEF: "the The Reichskolonie North Greenland"
- NGL_reichskolonie_ADJ: "$OVERLORD$ "
- NGL_reichsland: "Reichsland North Greenland"
- NGL_reichsland_DEF: "the The Reichsland North Greenland"
- NGL_reichsland_ADJ: "$OVERLORD$ "
-=======
  NGL_reichsprotectorate_ADJ: "$OVERLORD$ North Greenlandic"
  NGL_reichsgeneralgovernorate: "Generalgouvernement der North Greenland"
  NGL_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der North Greenland"
@@ -8812,7 +8810,6 @@
  NGL_reichsland: "Reichsland North Greenland"
  NGL_reichsland_DEF: "the The Reichsland North Greenland"
  NGL_reichsland_ADJ: "$OVERLORD$ North Greenlandic"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  PCZ_reichsprotectorate: "Protektorat Panama Canal Zone"
  PCZ_reichsprotectorate_DEF: "the The Protektorat Panama Canal Zone"
@@ -8992,21 +8989,6 @@
  
  SGL_reichsprotectorate: "Protektorat South Greenland"
  SGL_reichsprotectorate_DEF: "the The Protektorat South Greenland"
-<<<<<<< HEAD
- SGL_reichsprotectorate_ADJ: "$OVERLORD$ "
- SGL_reichsgeneralgovernorate: "Generalgouvernement der South Greenland"
- SGL_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der South Greenland"
- SGL_reichsgeneralgovernorate_ADJ: "$OVERLORD$ "
- SGL_reichskommissariat: "Reichskommissariat South Greenland"
- SGL_reichskommissariat_DEF: "the The Reichskommissariat South Greenland"
- SGL_reichskommissariat_ADJ: "$OVERLORD$ "
- SGL_reichskolonie: "Reichskolonie South Greenland"
- SGL_reichskolonie_DEF: "the The Reichskolonie South Greenland"
- SGL_reichskolonie_ADJ: "$OVERLORD$ "
- SGL_reichsland: "Reichsland South Greenland"
- SGL_reichsland_DEF: "the The Reichsland South Greenland"
- SGL_reichsland_ADJ: "$OVERLORD$ "
-=======
  SGL_reichsprotectorate_ADJ: "$OVERLORD$ South Greenlandic"
  SGL_reichsgeneralgovernorate: "Generalgouvernement der South Greenland"
  SGL_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der South Greenland"
@@ -9020,7 +9002,6 @@
  SGL_reichsland: "Reichsland South Greenland"
  SGL_reichsland_DEF: "the The Reichsland South Greenland"
  SGL_reichsland_ADJ: "$OVERLORD$ South Greenlandic"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  TOB_reichsprotectorate: "Protektorat Tobago"
  TOB_reichsprotectorate_DEF: "the The Protektorat Tobago"
@@ -10373,23 +10354,6 @@
  ZHELTUGA_reichsland_ADJ: "$OVERLORD$ Zheltuga "
  
 #ヨーロッパ
-<<<<<<< HEAD
- AEGandION_reichsprotectorate: "Protektorat Aegean and Ionian Islands"
- AEGandION_reichsprotectorate_DEF: "the The Protektorat Aegean and Ionian Islands"
- AEGandION_reichsprotectorate_ADJ: "$OVERLORD$ Aegean and Ionian"
- AEGandION_reichsgeneralgovernorate: "Generalgouvernement der Aegean and Ionian Islands"
- AEGandION_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der Aegean and Ionian Islands"
- AEGandION_reichsgeneralgovernorate_ADJ: "$OVERLORD$ Aegean and Ionian"
- AEGandION_reichskommissariat: "Reichskommissariat Aegean and Ionian Islands"
- AEGandION_reichskommissariat_DEF: "the The Reichskommissariat Aegean and Ionian Islands"
- AEGandION_reichskommissariat_ADJ: "$OVERLORD$ Aegean and Ionian"
- AEGandION_reichskolonie: "Reichskolonie Aegean and Ionian Islands"
- AEGandION_reichskolonie_DEF: "the The Reichskolonie Aegean and Ionian Islands"
- AEGandION_reichskolonie_ADJ: "$OVERLORD$ Aegean and Ionian"
- AEGandION_reichsland: "Reichsland Aegean and Ionian Islands"
- AEGandION_reichsland_DEF: "the The Reichsland Aegean and Ionian Islands"
- AEGandION_reichsland_ADJ: "$OVERLORD$ Aegean and Ionian"
-=======
  AEG-ION_reichsprotectorate: "Protektorat Aegean-Ionian Islands"
  AEG-ION_reichsprotectorate_DEF: "the The Protektorat Aegean-Ionian Islands"
  AEG-ION_reichsprotectorate_ADJ: "$OVERLORD$ Aegean-Ionian"
@@ -10405,7 +10369,6 @@
  AEG-ION_reichsland: "Reichsland Aegean-Ionian Islands"
  AEG-ION_reichsland_DEF: "the The Reichsland Aegean-Ionian Islands"
  AEG-ION_reichsland_ADJ: "$OVERLORD$ Aegean-Ionian"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  BYELORUSSIA_reichsprotectorate: "Protektorat Byelorussia"
  BYELORUSSIA_reichsprotectorate_DEF: "the The Protektorat Byelorussia"
@@ -10439,23 +10402,6 @@
  KAR-FIN_reichsland_DEF: "the The Reichsland Karelo-Finnish"
  KAR-FIN_reichsland_ADJ: "$OVERLORD$ Karelo-Finnish"
  
-<<<<<<< HEAD
- SHLandHLS_reichsprotectorate: "Protektorat Schleswig and Holstein"
- SHLandHLS_reichsprotectorate_DEF: "the The Protektorat Schleswig and Holstein"
- SHLandHLS_reichsprotectorate_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
- SHLandHLS_reichsgeneralgovernorate: "Generalgouvernement der Schleswig and Holstein"
- SHLandHLS_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der Schleswig and Holstein"
- SHLandHLS_reichsgeneralgovernorate_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
- SHLandHLS_reichskommissariat: "Reichskommissariat Schleswig and Holstein"
- SHLandHLS_reichskommissariat_DEF: "the The Reichskommissariat Schleswig and Holstein"
- SHLandHLS_reichskommissariat_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
- SHLandHLS_reichskolonie: "Reichskolonie Schleswig and Holstein"
- SHLandHLS_reichskolonie_DEF: "the The Reichskolonie Schleswig and Holstein"
- SHLandHLS_reichskolonie_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
- SHLandHLS_reichsland: "Reichsland Schleswig and Holstein"
- SHLandHLS_reichsland_DEF: "the The Reichsland Schleswig and Holstein"
- SHLandHLS_reichsland_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
-=======
  SHL-HLS_reichsprotectorate: "Protektorat Schleswig-Holstein"
  SHL-HLS_reichsprotectorate_DEF: "the The Protektorat Schleswig-Holstein"
  SHL-HLS_reichsprotectorate_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
@@ -10471,7 +10417,6 @@
  SHL-HLS_reichsland: "Reichsland Schleswig-Holstein"
  SHL-HLS_reichsland_DEF: "the The Reichsland Schleswig-Holstein"
  SHL-HLS_reichsland_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_reichsprotectorate: "Protektorat Gold Coast Northern Territories"
@@ -10525,23 +10470,6 @@
  
 #大洋州
  
-<<<<<<< HEAD
- KIRandTVL_reichsprotectorate: "Protektorat Kiribati and Tuvalu"
- KIRandTVL_reichsprotectorate_DEF: "the The Protektorat Kiribati and Tuvalu"
- KIRandTVL_reichsprotectorate_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
- KIRandTVL_reichsgeneralgovernorate: "Generalgouvernement der Kiribati and Tuvalu"
- KIRandTVL_reichsgeneralgovernorate_DEF: "the The Generalgouvernement der Kiribati and Tuvalu"
- KIRandTVL_reichsgeneralgovernorate_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
- KIRandTVL_reichskommissariat: "Reichskommissariat Kiribati and Tuvalu"
- KIRandTVL_reichskommissariat_DEF: "the The Reichskommissariat Kiribati and Tuvalu"
- KIRandTVL_reichskommissariat_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
- KIRandTVL_reichskolonie: "Reichskolonie Kiribati and Tuvalu"
- KIRandTVL_reichskolonie_DEF: "the The Reichskolonie Kiribati and Tuvalu"
- KIRandTVL_reichskolonie_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
- KIRandTVL_reichsland: "Reichsland Kiribati and Tuvalu"
- KIRandTVL_reichsland_DEF: "the The Reichsland Kiribati and Tuvalu"
- KIRandTVL_reichsland_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
-=======
  KIR-TVL_reichsprotectorate: "Protektorat Kiribati-Tuvalu"
  KIR-TVL_reichsprotectorate_DEF: "the The Protektorat Kiribati-Tuvalu"
  KIR-TVL_reichsprotectorate_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
@@ -10557,7 +10485,6 @@
  KIR-TVL_reichsland: "Reichsland Kiribati-Tuvalu"
  KIR-TVL_reichsland_DEF: "the The Reichsland Kiribati-Tuvalu"
  KIR-TVL_reichsland_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  
 #アメリカ諸州
