--- a/localisation/english/map/country_names/geacps_dependent_territory_names_JAP_l_english.yml
+++ b/localisation/english/map/country_names/geacps_dependent_territory_names_JAP_l_english.yml
@@ -2598,8 +2598,6 @@
  TYU_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Tyumen"
  TYU_imperial_overseas_territory_ADJ: "$OVERLORD$ Tyumenian"
  
-<<<<<<< HEAD
-=======
  VNT_imperial_constituent_state: "$OVERLORDADJ$ Vientianaise State"
  VNT_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Vientianaise State"
  VNT_imperial_constituent_state_ADJ: "$OVERLORD$ Vientianaise"
@@ -2607,7 +2605,6 @@
  VNT_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Vientiane"
  VNT_imperial_overseas_territory_ADJ: "$OVERLORD$ Vientianaise"
  
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  VAX_imperial_constituent_state: "$OVERLORDADJ$ Wa State"
  VAX_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Wa State"
  VAX_imperial_constituent_state_ADJ: "$OVERLORD$ Wa"
@@ -2649,6 +2646,13 @@
  ZHI_imperial_overseas_territory: "$OVERLORDADJ$ Zhili"
  ZHI_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Zhili"
  ZHI_imperial_overseas_territory_ADJ: "$OVERLORD$ Zhili"
+ 
+ SUL_imperial_constituent_state: "$OVERLORDADJ$ Sulu State"
+ SUL_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Sulu State"
+ SUL_imperial_constituent_state_ADJ: "$OVERLORD$ Sulu"
+ SUL_imperial_overseas_territory: "$OVERLORDADJ$ Sulu"
+ SUL_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Sulu"
+ SUL_imperial_overseas_territory_ADJ: "$OVERLORD$ Sulu"
  
 #ヨーロッパ:
  AEG_imperial_constituent_state: "$OVERLORDADJ$ Aegean Islander State"
@@ -3850,21 +3854,12 @@
  NAC_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ North America"
  NAC_imperial_overseas_territory_ADJ: "$OVERLORD$ North American"
  
-<<<<<<< HEAD
- NGL_imperial_constituent_state: "$OVERLORDADJ$  State"
- NGL_imperial_constituent_state_DEF: "the The $OVERLORDADJ$  State"
- NGL_imperial_constituent_state_ADJ: "$OVERLORD$ "
- NGL_imperial_overseas_territory: "$OVERLORDADJ$ North Greenland"
- NGL_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ North Greenland"
- NGL_imperial_overseas_territory_ADJ: "$OVERLORD$ "
-=======
  NGL_imperial_constituent_state: "$OVERLORDADJ$ North Greenlandic State"
  NGL_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ North Greenlandic State"
  NGL_imperial_constituent_state_ADJ: "$OVERLORD$ North Greenlandic"
  NGL_imperial_overseas_territory: "$OVERLORDADJ$ North Greenland"
  NGL_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ North Greenland"
  NGL_imperial_overseas_territory_ADJ: "$OVERLORD$ North Greenlandic"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  PCZ_imperial_constituent_state: "$OVERLORDADJ$ Panama Canal Zone State"
  PCZ_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Panama Canal Zone State"
@@ -3943,21 +3938,12 @@
  SAC_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ South America"
  SAC_imperial_overseas_territory_ADJ: "$OVERLORD$ South American"
  
-<<<<<<< HEAD
- SGL_imperial_constituent_state: "$OVERLORDADJ$  State"
- SGL_imperial_constituent_state_DEF: "the The $OVERLORDADJ$  State"
- SGL_imperial_constituent_state_ADJ: "$OVERLORD$ "
- SGL_imperial_overseas_territory: "$OVERLORDADJ$ South Greenland"
- SGL_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ South Greenland"
- SGL_imperial_overseas_territory_ADJ: "$OVERLORD$ "
-=======
  SGL_imperial_constituent_state: "$OVERLORDADJ$ South Greenlandic State"
  SGL_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ South Greenlandic State"
  SGL_imperial_constituent_state_ADJ: "$OVERLORD$ South Greenlandic"
  SGL_imperial_overseas_territory: "$OVERLORDADJ$ South Greenland"
  SGL_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ South Greenland"
  SGL_imperial_overseas_territory_ADJ: "$OVERLORD$ South Greenlandic"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  TOB_imperial_constituent_state: "$OVERLORDADJ$ Tobagonian State"
  TOB_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Tobagonian State"
@@ -4560,21 +4546,12 @@
  ZHELTUGA_imperial_overseas_territory_ADJ: "$OVERLORD$ Zheltuga "
  
 #ヨーロッパ
-<<<<<<< HEAD
- AEGandION_imperial_constituent_state: "$OVERLORDADJ$ Aegean and Ionian State"
- AEGandION_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Aegean and Ionian State"
- AEGandION_imperial_constituent_state_ADJ: "$OVERLORD$ Aegean and Ionian"
- AEGandION_imperial_overseas_territory: "$OVERLORDADJ$ Aegean and Ionian Islands"
- AEGandION_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Aegean and Ionian Islands"
- AEGandION_imperial_overseas_territory_ADJ: "$OVERLORD$ Aegean and Ionian"
-=======
  AEG-ION_imperial_constituent_state: "$OVERLORDADJ$ Aegean-Ionian State"
  AEG-ION_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Aegean-Ionian State"
  AEG-ION_imperial_constituent_state_ADJ: "$OVERLORD$ Aegean-Ionian"
  AEG-ION_imperial_overseas_territory: "$OVERLORDADJ$ Aegean-Ionian Islands"
  AEG-ION_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Aegean-Ionian Islands"
  AEG-ION_imperial_overseas_territory_ADJ: "$OVERLORD$ Aegean-Ionian"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  BYELORUSSIA_imperial_constituent_state: "$OVERLORDADJ$ Byelorussian State"
  BYELORUSSIA_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Byelorussian State"
@@ -4590,21 +4567,12 @@
  KAR-FIN_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Karelo-Finnish"
  KAR-FIN_imperial_overseas_territory_ADJ: "$OVERLORD$ Karelo-Finnish"
  
-<<<<<<< HEAD
- SHLandHLS_imperial_constituent_state: "$OVERLORDADJ$ Schleswig and Holsteinian State"
- SHLandHLS_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Schleswig and Holsteinian State"
- SHLandHLS_imperial_constituent_state_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
- SHLandHLS_imperial_overseas_territory: "$OVERLORDADJ$ Schleswig and Holstein"
- SHLandHLS_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Schleswig and Holstein"
- SHLandHLS_imperial_overseas_territory_ADJ: "$OVERLORD$ Schleswig and Holsteinian"
-=======
  SHL-HLS_imperial_constituent_state: "$OVERLORDADJ$ Schleswig-Holsteinian State"
  SHL-HLS_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Schleswig-Holsteinian State"
  SHL-HLS_imperial_constituent_state_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
  SHL-HLS_imperial_overseas_territory: "$OVERLORDADJ$ Schleswig-Holstein"
  SHL-HLS_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Schleswig-Holstein"
  SHL-HLS_imperial_overseas_territory_ADJ: "$OVERLORD$ Schleswig-Holsteinian"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_imperial_constituent_state: "$OVERLORDADJ$ Gold Coast Northern Territories State"
@@ -4634,21 +4602,12 @@
  COOKISLANDS_federation_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Cook Islands Federation"
  COOKISLANDS_federation_imperial_constituent_state_ADJ: "$OVERLORD$ Cook Islands"
  
-<<<<<<< HEAD
- KIRandTVL_imperial_constituent_state: "$OVERLORDADJ$ I-Kiribati and Tuvaluan State"
- KIRandTVL_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ I-Kiribati and Tuvaluan State"
- KIRandTVL_imperial_constituent_state_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
- KIRandTVL_imperial_overseas_territory: "$OVERLORDADJ$ Kiribati and Tuvalu"
- KIRandTVL_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Kiribati and Tuvalu"
- KIRandTVL_imperial_overseas_territory_ADJ: "$OVERLORD$ I-Kiribati and Tuvaluan"
-=======
  KIR-TVL_imperial_constituent_state: "$OVERLORDADJ$ I-Kiribati-Tuvaluan State"
  KIR-TVL_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ I-Kiribati-Tuvaluan State"
  KIR-TVL_imperial_constituent_state_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
  KIR-TVL_imperial_overseas_territory: "$OVERLORDADJ$ Kiribati-Tuvalu"
  KIR-TVL_imperial_overseas_territory_DEF: "the The $OVERLORDADJ$ Kiribati-Tuvalu"
  KIR-TVL_imperial_overseas_territory_ADJ: "$OVERLORD$ I-Kiribati-Tuvaluan"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  RAROTONGA_kingdom_imperial_constituent_state: "$OVERLORDADJ$ Kingdom of Rarotonga"
  RAROTONGA_kingdom_imperial_constituent_state_DEF: "the The $OVERLORDADJ$ Kingdom of Rarotonga"
