--- a/localisation/japanese/map/country_names/geacps_country_names_form_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_country_names_form_l_japanese.yml
@@ -125,11 +125,6 @@
  
  IND_empire: "インド帝国"
  IND_empire_DEF: "インド帝国"
-<<<<<<< HEAD
- IND_empire: "インド帝国"
- IND_empire_DEF: "インド帝国"
-=======
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  IND_republic: "インド共和国"
  IND_republic_DEF: "インド共和国"
  IND_union: "インド連合"
@@ -348,11 +343,6 @@
  SYR_arab_republic_DEF: "シリア・アラブ共和国"
  SYR_republic: "シリア共和国"
  SYR_republic_DEF: "シリア共和国"
-<<<<<<< HEAD
- SYR_republic: "シリア共和国"
- SYR_republic_DEF: "シリア共和国"
-=======
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  TAJ_republic: "タジキスタン共和国"
  TAJ_republic_DEF: "タジキスタン共和国"
@@ -650,11 +640,6 @@
  GRE_democratic_republic_DEF: "ギリシャ民主共和国"
  GRE_kingdom: "ギリシャ王国"
  GRE_kingdom_DEF: "ギリシャ王国"
-<<<<<<< HEAD
- GRE_kingdom: "ギリシャ王国"
- GRE_kingdom_DEF: "ギリシャ王国"
-=======
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  GRE_provisional_democratic_government: "ギリシャ臨時民主政府"
  GRE_provisional_democratic_government_DEF: "ギリシャ臨時民主政府"
  GRE_republic: "ギリシャ共和国"
@@ -1477,11 +1462,6 @@
 #大洋州:
  AST_commonwealth: "オーストラリア連邦"
  AST_commonwealth_DEF: "オーストラリア連邦"
-<<<<<<< HEAD
- AST_commonwealth: "オーストラリア連邦"
- AST_commonwealth_DEF: "オーストラリア連邦"
-=======
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  AST_republic: "オーストラリア共和国"
  AST_republic_DEF: "オーストラリア共和国"
  
@@ -1497,11 +1477,6 @@
  
  HAW_kingdom: "ハワイ王国"
  HAW_kingdom_DEF: "ハワイ王国"
-<<<<<<< HEAD
- HAW_kingdom: "ハワイ王国"
- HAW_kingdom_DEF: "ハワイ王国"
-=======
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  HAW_republic: "ハワイ共和国"
  HAW_republic_DEF: "ハワイ共和国"
  
@@ -2229,6 +2204,9 @@
  ZHI_suweiai_government: "直隷蘇維埃政府"
  ZHI_suweiai_government_DEF: "直隷蘇維埃政府"
  
+ SUL_sultanate: "スールー・スルタン国"
+ SUL_sultanate_DEF: "スールー・スルタン国"
+ 
 #ヨーロッパ:
  AEG_federation: "エーゲ連邦"
  AEG_federation_DEF: "エーゲ連邦"
@@ -2428,11 +2406,6 @@
  
  GUE_bailiwick: "ガーンジー代官管轄区"
  GUE_bailiwick_DEF: "ガーンジー代官管轄区"
-<<<<<<< HEAD
- GUE_bailiwick: "ガーンジー代官管轄区"
- GUE_bailiwick_DEF: "ガーンジー代官管轄区"
-=======
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  GUE_republic: "ガーンジー共和国"
  GUE_republic_DEF: "ガーンジー共和国"
  
@@ -2477,11 +2450,6 @@
  
  JER_bailiwick: "ジャージー代官管轄区"
  JER_bailiwick_DEF: "ジャージー代官管轄区"
-<<<<<<< HEAD
- JER_bailiwick: "ジャージー代官管轄区"
- JER_bailiwick_DEF: "ジャージー代官管轄区"
-=======
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  JER_republic: "ジャージー共和国"
  JER_republic_DEF: "ジャージー共和国"
  
