--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_GER_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_GER_l_japanese.yml
@@ -5928,8 +5928,6 @@
  TYU_reichsland_DEF: "チュメニ国家直轄地"
  TYU_reichsland_ADJ: "$OVERLORD$領チュメニ"
  
-<<<<<<< HEAD
-=======
  VNT_reichsprotectorate: "ヴィエンチャン保護領"
  VNT_reichsprotectorate_DEF: "ヴィエンチャン保護領"
  VNT_reichsprotectorate_ADJ: "$OVERLORD$領ヴィエンチャン"
@@ -5946,7 +5944,6 @@
  VNT_reichsland_DEF: "ヴィエンチャン国家直轄地"
  VNT_reichsland_ADJ: "$OVERLORD$領ヴィエンチャン"
  
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  VAX_reichsprotectorate: "ワ保護領"
  VAX_reichsprotectorate_DEF: "ワ保護領"
  VAX_reichsprotectorate_ADJ: "$OVERLORD$領ワ"
@@ -6042,6 +6039,22 @@
  ZHI_reichsland: "直隷国家直轄地"
  ZHI_reichsland_DEF: "直隷国家直轄地"
  ZHI_reichsland_ADJ: "$OVERLORD$領直隷"
+ 
+ SUL_reichsprotectorate: "スールー保護領"
+ SUL_reichsprotectorate_DEF: "スールー保護領"
+ SUL_reichsprotectorate_ADJ: "$OVERLORD$領スールー"
+ SUL_reichsgeneralgovernorate: "スールー総督府領"
+ SUL_reichsgeneralgovernorate_DEF: "スールー総督府領"
+ SUL_reichsgeneralgovernorate_ADJ: "$OVERLORD$領スールー"
+ SUL_reichskommissariat: "スールー国家弁務官区"
+ SUL_reichskommissariat_DEF: "スールー国家弁務官区"
+ SUL_reichskommissariat_ADJ: "$OVERLORD$領スールー"
+ SUL_reichskolonie: "スールー国家植民地"
+ SUL_reichskolonie_DEF: "スールー国家植民地"
+ SUL_reichskolonie_ADJ: "$OVERLORD$領スールー"
+ SUL_reichsland: "スールー国家直轄地"
+ SUL_reichsland_DEF: "スールー国家直轄地"
+ SUL_reichsland_ADJ: "$OVERLORD$領スールー"
  
 #ヨーロッパ:
  AEG_reichsprotectorate: "エーゲ諸島保護領"
@@ -10362,23 +10375,6 @@
  ZHELTUGA_reichsland_ADJ: "$OVERLORD$領ゼルトゥガ"
  
 #ヨーロッパ
-<<<<<<< HEAD
- AEGandION_reichsprotectorate: "エーゲ及びイオニア諸島保護領"
- AEGandION_reichsprotectorate_DEF: "エーゲ及びイオニア諸島保護領"
- AEGandION_reichsprotectorate_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_reichsgeneralgovernorate: "エーゲ及びイオニア諸島総督府領"
- AEGandION_reichsgeneralgovernorate_DEF: "エーゲ及びイオニア諸島総督府領"
- AEGandION_reichsgeneralgovernorate_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_reichskommissariat: "エーゲ及びイオニア諸島国家弁務官区"
- AEGandION_reichskommissariat_DEF: "エーゲ及びイオニア諸島国家弁務官区"
- AEGandION_reichskommissariat_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_reichskolonie: "エーゲ及びイオニア諸島国家植民地"
- AEGandION_reichskolonie_DEF: "エーゲ及びイオニア諸島国家植民地"
- AEGandION_reichskolonie_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
- AEGandION_reichsland: "エーゲ及びイオニア諸島国家直轄地"
- AEGandION_reichsland_DEF: "エーゲ及びイオニア諸島国家直轄地"
- AEGandION_reichsland_ADJ: "$OVERLORD$領エーゲ・イオニア諸島"
-=======
  AEG-ION_reichsprotectorate: "エーゲ＝イオニア諸島保護領"
  AEG-ION_reichsprotectorate_DEF: "エーゲ＝イオニア諸島保護領"
  AEG-ION_reichsprotectorate_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
@@ -10394,7 +10390,6 @@
  AEG-ION_reichsland: "エーゲ＝イオニア諸島国家直轄地"
  AEG-ION_reichsland_DEF: "エーゲ＝イオニア諸島国家直轄地"
  AEG-ION_reichsland_ADJ: "$OVERLORD$領エーゲ＝イオニア諸島"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  BYELORUSSIA_reichsprotectorate: "ベロロシア保護領"
  BYELORUSSIA_reichsprotectorate_DEF: "ベロロシア保護領"
@@ -10428,23 +10423,6 @@
  KAR-FIN_reichsland_DEF: "カレロ＝フィン国家直轄地"
  KAR-FIN_reichsland_ADJ: "$OVERLORD$領カレロ＝フィン"
  
-<<<<<<< HEAD
- SHLandHLS_reichsprotectorate: "シュレースヴィヒ及びホルシュタイン保護領"
- SHLandHLS_reichsprotectorate_DEF: "シュレースヴィヒ及びホルシュタイン保護領"
- SHLandHLS_reichsprotectorate_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_reichsgeneralgovernorate: "シュレースヴィヒ及びホルシュタイン総督府領"
- SHLandHLS_reichsgeneralgovernorate_DEF: "シュレースヴィヒ及びホルシュタイン総督府領"
- SHLandHLS_reichsgeneralgovernorate_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_reichskommissariat: "シュレースヴィヒ及びホルシュタイン国家弁務官区"
- SHLandHLS_reichskommissariat_DEF: "シュレースヴィヒ及びホルシュタイン国家弁務官区"
- SHLandHLS_reichskommissariat_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_reichskolonie: "シュレースヴィヒ及びホルシュタイン国家植民地"
- SHLandHLS_reichskolonie_DEF: "シュレースヴィヒ及びホルシュタイン国家植民地"
- SHLandHLS_reichskolonie_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
- SHLandHLS_reichsland: "シュレースヴィヒ及びホルシュタイン国家直轄地"
- SHLandHLS_reichsland_DEF: "シュレースヴィヒ及びホルシュタイン国家直轄地"
- SHLandHLS_reichsland_ADJ: "$OVERLORD$領シュレースヴィヒ・ホルシュタイン"
-=======
  SHL-HLS_reichsprotectorate: "シュレースヴィヒ＝ホルシュタイン保護領"
  SHL-HLS_reichsprotectorate_DEF: "シュレースヴィヒ＝ホルシュタイン保護領"
  SHL-HLS_reichsprotectorate_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
@@ -10460,7 +10438,6 @@
  SHL-HLS_reichsland: "シュレースヴィヒ＝ホルシュタイン国家直轄地"
  SHL-HLS_reichsland_DEF: "シュレースヴィヒ＝ホルシュタイン国家直轄地"
  SHL-HLS_reichsland_ADJ: "$OVERLORD$領シュレースヴィヒ＝ホルシュタイン"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_reichsprotectorate: "ゴールド・コースト北部地域保護領"
@@ -10514,23 +10491,6 @@
  
 #大洋州
  
-<<<<<<< HEAD
- KIRandTVL_reichsprotectorate: "キリバス及びツバル保護領"
- KIRandTVL_reichsprotectorate_DEF: "キリバス及びツバル保護領"
- KIRandTVL_reichsprotectorate_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_reichsgeneralgovernorate: "キリバス及びツバル総督府領"
- KIRandTVL_reichsgeneralgovernorate_DEF: "キリバス及びツバル総督府領"
- KIRandTVL_reichsgeneralgovernorate_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_reichskommissariat: "キリバス及びツバル国家弁務官区"
- KIRandTVL_reichskommissariat_DEF: "キリバス及びツバル国家弁務官区"
- KIRandTVL_reichskommissariat_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_reichskolonie: "キリバス及びツバル国家植民地"
- KIRandTVL_reichskolonie_DEF: "キリバス及びツバル国家植民地"
- KIRandTVL_reichskolonie_ADJ: "$OVERLORD$領キリバス・ツバル"
- KIRandTVL_reichsland: "キリバス及びツバル国家直轄地"
- KIRandTVL_reichsland_DEF: "キリバス及びツバル国家直轄地"
- KIRandTVL_reichsland_ADJ: "$OVERLORD$領キリバス・ツバル"
-=======
  KIR-TVL_reichsprotectorate: "キリバス＝ツバル保護領"
  KIR-TVL_reichsprotectorate_DEF: "キリバス＝ツバル保護領"
  KIR-TVL_reichsprotectorate_ADJ: "$OVERLORD$領キリバス＝ツバル"
@@ -10546,7 +10506,6 @@
  KIR-TVL_reichsland: "キリバス＝ツバル国家直轄地"
  KIR-TVL_reichsland_DEF: "キリバス＝ツバル国家直轄地"
  KIR-TVL_reichsland_ADJ: "$OVERLORD$領キリバス＝ツバル"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  
 #アメリカ諸州
