--- a/localisation/japanese/map/country_names/geacps_dependent_territory_names_SOV_l_japanese.yml
+++ b/localisation/japanese/map/country_names/geacps_dependent_territory_names_SOV_l_japanese.yml
@@ -10564,6 +10564,34 @@
  ZHI_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "直隷自治$OVERLORDADJ$社会主義共和国"
  ZHI_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "直隷・$OVERLORD$"
  
+ SUL_SOV_constituent_republic: "スールー・$OVERLORDADJ$共和国"
+ SUL_SOV_constituent_republic_DEF: "スールー・$OVERLORDADJ$共和国"
+ SUL_SOV_constituent_republic_ADJ: "スールー・$OVERLORD$"
+ SUL_SOV_constituent_federative_republic: "スールー・$OVERLORDADJ$連邦共和国"
+ SUL_SOV_constituent_federative_republic_DEF: "スールー・$OVERLORDADJ$連邦共和国"
+ SUL_SOV_constituent_federative_republic_ADJ: "スールー・$OVERLORD$"
+ SUL_SOV_constituent_autonomous_republic: "スールー自治$OVERLORDADJ$共和国"
+ SUL_SOV_constituent_autonomous_republic_DEF: "スールー自治$OVERLORDADJ$共和国"
+ SUL_SOV_constituent_autonomous_republic_ADJ: "スールー・$OVERLORD$"
+ SUL_orthodox_socialism_SOV_constituent_republic: "スールー・$OVERLORDADJ$社会主義共和国"
+ SUL_orthodox_socialism_SOV_constituent_republic_DEF: "スールー・$OVERLORDADJ$社会主義共和国"
+ SUL_orthodox_socialism_SOV_constituent_republic_ADJ: "スールー・$OVERLORD$"
+ SUL_orthodox_socialism_SOV_constituent_federative_republic: "スールー・$OVERLORDADJ$社会主義連邦共和国"
+ SUL_orthodox_socialism_SOV_constituent_federative_republic_DEF: "スールー・$OVERLORDADJ$社会主義連邦共和国"
+ SUL_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "スールー・$OVERLORD$"
+ SUL_orthodox_socialism_SOV_constituent_autonomous_republic: "スールー自治$OVERLORDADJ$社会主義共和国"
+ SUL_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "スールー自治$OVERLORDADJ$社会主義共和国"
+ SUL_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "スールー・$OVERLORD$"
+ SUL_progressive_socialism_SOV_constituent_republic: "スールー・$OVERLORDADJ$社会主義共和国"
+ SUL_progressive_socialism_SOV_constituent_republic_DEF: "スールー・$OVERLORDADJ$社会主義共和国"
+ SUL_progressive_socialism_SOV_constituent_republic_ADJ: "スールー・$OVERLORD$"
+ SUL_progressive_socialism_SOV_constituent_federative_republic: "スールー・$OVERLORDADJ$社会主義連邦共和国"
+ SUL_progressive_socialism_SOV_constituent_federative_republic_DEF: "スールー・$OVERLORDADJ$社会主義連邦共和国"
+ SUL_progressive_socialism_SOV_constituent_federative_republic_ADJ: "スールー・$OVERLORD$"
+ SUL_progressive_socialism_SOV_constituent_autonomous_republic: "スールー自治$OVERLORDADJ$社会主義共和国"
+ SUL_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "スールー自治$OVERLORDADJ$社会主義共和国"
+ SUL_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "スールー・$OVERLORD$"
+ 
 #ヨーロッパ:
  AEG_SOV_constituent_republic: "エーゲ・$OVERLORDADJ$共和国"
  AEG_SOV_constituent_republic_DEF: "エーゲ・$OVERLORDADJ$共和国"
@@ -18582,35 +18610,6 @@
  ZHELTUGA_SOV_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "ゼルトゥガ・$OVERLORD$"
  
 #ヨーロッパ
-<<<<<<< HEAD
- AEGandION_SOV_constituent_republic: "エーゲ及びイオニア諸島・$OVERLORDADJ$共和国"
- AEGandION_SOV_constituent_republic_DEF: "エーゲ及びイオニア諸島・$OVERLORDADJ$共和国"
- AEGandION_SOV_constituent_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
- AEGandION_SOV_constituent_federative_republic: "エーゲ及びイオニア諸島・$OVERLORDADJ$連邦共和国"
- AEGandION_SOV_constituent_federative_republic_DEF: "エーゲ及びイオニア諸島・$OVERLORDADJ$連邦共和国"
- AEGandION_SOV_constituent_federative_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
- AEGandION_SOV_constituent_autonomous_republic: "エーゲ及びイオニア諸島自治$OVERLORDADJ$共和国"
- AEGandION_SOV_constituent_autonomous_republic_DEF: "エーゲ及びイオニア諸島自治$OVERLORDADJ$共和国"
- AEGandION_SOV_constituent_autonomous_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
- AEGandION_orthodox_socialism_SOV_constituent_republic: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義共和国"
- AEGandION_orthodox_socialism_SOV_constituent_republic_DEF: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義共和国"
- AEGandION_orthodox_socialism_SOV_constituent_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
- AEGandION_orthodox_socialism_SOV_constituent_federative_republic: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義連邦共和国"
- AEGandION_orthodox_socialism_SOV_constituent_federative_republic_DEF: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義連邦共和国"
- AEGandION_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
- AEGandION_orthodox_socialism_SOV_constituent_autonomous_republic: "エーゲ及びイオニア諸島自治$OVERLORDADJ$社会主義共和国"
- AEGandION_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "エーゲ及びイオニア諸島自治$OVERLORDADJ$社会主義共和国"
- AEGandION_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
- AEGandION_progressive_socialism_SOV_constituent_republic: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義共和国"
- AEGandION_progressive_socialism_SOV_constituent_republic_DEF: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義共和国"
- AEGandION_progressive_socialism_SOV_constituent_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
- AEGandION_progressive_socialism_SOV_constituent_federative_republic: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義連邦共和国"
- AEGandION_progressive_socialism_SOV_constituent_federative_republic_DEF: "エーゲ及びイオニア諸島・$OVERLORDADJ$社会主義連邦共和国"
- AEGandION_progressive_socialism_SOV_constituent_federative_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
- AEGandION_progressive_socialism_SOV_constituent_autonomous_republic: "エーゲ及びイオニア諸島自治$OVERLORDADJ$社会主義共和国"
- AEGandION_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "エーゲ及びイオニア諸島自治$OVERLORDADJ$社会主義共和国"
- AEGandION_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "エーゲ・イオニア諸島・$OVERLORD$"
-=======
  AEG-ION_SOV_constituent_republic: "エーゲ＝イオニア諸島・$OVERLORDADJ$共和国"
  AEG-ION_SOV_constituent_republic_DEF: "エーゲ＝イオニア諸島・$OVERLORDADJ$共和国"
  AEG-ION_SOV_constituent_republic_ADJ: "エーゲ＝イオニア諸島・$OVERLORD$"
@@ -18638,7 +18637,6 @@
  AEG-ION_progressive_socialism_SOV_constituent_autonomous_republic: "エーゲ＝イオニア諸島自治$OVERLORDADJ$社会主義共和国"
  AEG-ION_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "エーゲ＝イオニア諸島自治$OVERLORDADJ$社会主義共和国"
  AEG-ION_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "エーゲ＝イオニア諸島・$OVERLORD$"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  BYELORUSSIA_SOV_colony: "$OVERLORDADJ$領ベロロシア植民地"
  BYELORUSSIA_SOV_colony_DEF: "$OVERLORDADJ$領ベロロシア植民地"
@@ -18834,35 +18832,6 @@
  KAR-FIN_SOV_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "カレロ＝フィン自治$OVERLORDADJ$社会主義共和国"
  KAR-FIN_SOV_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "カレロ＝フィン・$OVERLORD$"
  
-<<<<<<< HEAD
- SHLandHLS_SOV_constituent_republic: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$共和国"
- SHLandHLS_SOV_constituent_republic_DEF: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$共和国"
- SHLandHLS_SOV_constituent_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
- SHLandHLS_SOV_constituent_federative_republic: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$連邦共和国"
- SHLandHLS_SOV_constituent_federative_republic_DEF: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$連邦共和国"
- SHLandHLS_SOV_constituent_federative_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
- SHLandHLS_SOV_constituent_autonomous_republic: "シュレースヴィヒ及びホルシュタイン自治$OVERLORDADJ$共和国"
- SHLandHLS_SOV_constituent_autonomous_republic_DEF: "シュレースヴィヒ及びホルシュタイン自治$OVERLORDADJ$共和国"
- SHLandHLS_SOV_constituent_autonomous_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
- SHLandHLS_orthodox_socialism_SOV_constituent_republic: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義共和国"
- SHLandHLS_orthodox_socialism_SOV_constituent_republic_DEF: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義共和国"
- SHLandHLS_orthodox_socialism_SOV_constituent_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
- SHLandHLS_orthodox_socialism_SOV_constituent_federative_republic: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義連邦共和国"
- SHLandHLS_orthodox_socialism_SOV_constituent_federative_republic_DEF: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義連邦共和国"
- SHLandHLS_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
- SHLandHLS_orthodox_socialism_SOV_constituent_autonomous_republic: "シュレースヴィヒ及びホルシュタイン自治$OVERLORDADJ$社会主義共和国"
- SHLandHLS_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "シュレースヴィヒ及びホルシュタイン自治$OVERLORDADJ$社会主義共和国"
- SHLandHLS_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
- SHLandHLS_progressive_socialism_SOV_constituent_republic: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義共和国"
- SHLandHLS_progressive_socialism_SOV_constituent_republic_DEF: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義共和国"
- SHLandHLS_progressive_socialism_SOV_constituent_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
- SHLandHLS_progressive_socialism_SOV_constituent_federative_republic: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義連邦共和国"
- SHLandHLS_progressive_socialism_SOV_constituent_federative_republic_DEF: "シュレースヴィヒ及びホルシュタイン・$OVERLORDADJ$社会主義連邦共和国"
- SHLandHLS_progressive_socialism_SOV_constituent_federative_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
- SHLandHLS_progressive_socialism_SOV_constituent_autonomous_republic: "シュレースヴィヒ及びホルシュタイン自治$OVERLORDADJ$社会主義共和国"
- SHLandHLS_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "シュレースヴィヒ及びホルシュタイン自治$OVERLORDADJ$社会主義共和国"
- SHLandHLS_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "シュレースヴィヒ・ホルシュタイン・$OVERLORD$"
-=======
  SHL-HLS_SOV_constituent_republic: "シュレースヴィヒ＝ホルシュタイン・$OVERLORDADJ$共和国"
  SHL-HLS_SOV_constituent_republic_DEF: "シュレースヴィヒ＝ホルシュタイン・$OVERLORDADJ$共和国"
  SHL-HLS_SOV_constituent_republic_ADJ: "シュレースヴィヒ＝ホルシュタイン・$OVERLORD$"
@@ -18890,7 +18859,6 @@
  SHL-HLS_progressive_socialism_SOV_constituent_autonomous_republic: "シュレースヴィヒ＝ホルシュタイン自治$OVERLORDADJ$社会主義共和国"
  SHL-HLS_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "シュレースヴィヒ＝ホルシュタイン自治$OVERLORDADJ$社会主義共和国"
  SHL-HLS_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "シュレースヴィヒ＝ホルシュタイン・$OVERLORD$"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
 #アフリカ
  GOLDCOASTNORTHERNTERRITORIES_SOV_constituent_republic: "ゴールド・コースト北部地域・$OVERLORDADJ$共和国"
@@ -18980,35 +18948,6 @@
  
 #大洋州
  
-<<<<<<< HEAD
- KIRandTVL_SOV_constituent_republic: "キリバス及びツバル・$OVERLORDADJ$共和国"
- KIRandTVL_SOV_constituent_republic_DEF: "キリバス及びツバル・$OVERLORDADJ$共和国"
- KIRandTVL_SOV_constituent_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
- KIRandTVL_SOV_constituent_federative_republic: "キリバス及びツバル・$OVERLORDADJ$連邦共和国"
- KIRandTVL_SOV_constituent_federative_republic_DEF: "キリバス及びツバル・$OVERLORDADJ$連邦共和国"
- KIRandTVL_SOV_constituent_federative_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
- KIRandTVL_SOV_constituent_autonomous_republic: "キリバス及びツバル自治$OVERLORDADJ$共和国"
- KIRandTVL_SOV_constituent_autonomous_republic_DEF: "キリバス及びツバル自治$OVERLORDADJ$共和国"
- KIRandTVL_SOV_constituent_autonomous_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
- KIRandTVL_orthodox_socialism_SOV_constituent_republic: "キリバス及びツバル・$OVERLORDADJ$社会主義共和国"
- KIRandTVL_orthodox_socialism_SOV_constituent_republic_DEF: "キリバス及びツバル・$OVERLORDADJ$社会主義共和国"
- KIRandTVL_orthodox_socialism_SOV_constituent_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
- KIRandTVL_orthodox_socialism_SOV_constituent_federative_republic: "キリバス及びツバル・$OVERLORDADJ$社会主義連邦共和国"
- KIRandTVL_orthodox_socialism_SOV_constituent_federative_republic_DEF: "キリバス及びツバル・$OVERLORDADJ$社会主義連邦共和国"
- KIRandTVL_orthodox_socialism_SOV_constituent_federative_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
- KIRandTVL_orthodox_socialism_SOV_constituent_autonomous_republic: "キリバス及びツバル自治$OVERLORDADJ$社会主義共和国"
- KIRandTVL_orthodox_socialism_SOV_constituent_autonomous_republic_DEF: "キリバス及びツバル自治$OVERLORDADJ$社会主義共和国"
- KIRandTVL_orthodox_socialism_SOV_constituent_autonomous_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
- KIRandTVL_progressive_socialism_SOV_constituent_republic: "キリバス及びツバル・$OVERLORDADJ$社会主義共和国"
- KIRandTVL_progressive_socialism_SOV_constituent_republic_DEF: "キリバス及びツバル・$OVERLORDADJ$社会主義共和国"
- KIRandTVL_progressive_socialism_SOV_constituent_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
- KIRandTVL_progressive_socialism_SOV_constituent_federative_republic: "キリバス及びツバル・$OVERLORDADJ$社会主義連邦共和国"
- KIRandTVL_progressive_socialism_SOV_constituent_federative_republic_DEF: "キリバス及びツバル・$OVERLORDADJ$社会主義連邦共和国"
- KIRandTVL_progressive_socialism_SOV_constituent_federative_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
- KIRandTVL_progressive_socialism_SOV_constituent_autonomous_republic: "キリバス及びツバル自治$OVERLORDADJ$社会主義共和国"
- KIRandTVL_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "キリバス及びツバル自治$OVERLORDADJ$社会主義共和国"
- KIRandTVL_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "キリバス・ツバル・$OVERLORD$"
-=======
  KIR-TVL_SOV_constituent_republic: "キリバス＝ツバル・$OVERLORDADJ$共和国"
  KIR-TVL_SOV_constituent_republic_DEF: "キリバス＝ツバル・$OVERLORDADJ$共和国"
  KIR-TVL_SOV_constituent_republic_ADJ: "キリバス＝ツバル・$OVERLORD$"
@@ -19036,7 +18975,6 @@
  KIR-TVL_progressive_socialism_SOV_constituent_autonomous_republic: "キリバス＝ツバル自治$OVERLORDADJ$社会主義共和国"
  KIR-TVL_progressive_socialism_SOV_constituent_autonomous_republic_DEF: "キリバス＝ツバル自治$OVERLORDADJ$社会主義共和国"
  KIR-TVL_progressive_socialism_SOV_constituent_autonomous_republic_ADJ: "キリバス＝ツバル・$OVERLORD$"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  
 #アメリカ諸州
