--- a/localisation/english/map/country_names/geacps_country_names_form_l_english.yml
+++ b/localisation/english/map/country_names/geacps_country_names_form_l_english.yml
@@ -125,11 +125,6 @@
  
  IND_empire: "Indian Empire"
  IND_empire_DEF: "the The Indian Empire"
-<<<<<<< HEAD
- IND_empire: "Indian Empire"
- IND_empire_DEF: "the The Indian Empire"
-=======
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  IND_republic: "Republic of India"
  IND_republic_DEF: "the The Republic of India"
  IND_union: "Union of India"
@@ -348,11 +343,6 @@
  SYR_arab_republic_DEF: "the The Syrian Arab Republic"
  SYR_republic: "Syrian Republic"
  SYR_republic_DEF: "the The Syrian Republic"
-<<<<<<< HEAD
- SYR_republic: "Syrian Republic"
- SYR_republic_DEF: "the The Syrian Republic"
-=======
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  
  TAJ_republic: "Republic of Tadzhikistan"
  TAJ_republic_DEF: "the The Republic of Tadzhikistan"
@@ -650,11 +640,6 @@
  GRE_democratic_republic_DEF: "the The Democratic Republic of Greece"
  GRE_kingdom: "Kingdom of Greece"
  GRE_kingdom_DEF: "the The Kingdom of Greece"
-<<<<<<< HEAD
- GRE_kingdom: "Kingdom of Greece"
- GRE_kingdom_DEF: "the The Kingdom of Greece"
-=======
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  GRE_provisional_democratic_government: "Provisional Democratic Government of Greece"
  GRE_provisional_democratic_government_DEF: "the The Provisional Democratic Government of Greece"
  GRE_republic: "Greek Republic"
@@ -1477,11 +1462,6 @@
 #大洋州:
  AST_commonwealth: "Commonwealth of Australia"
  AST_commonwealth_DEF: "the The Commonwealth of Australia"
-<<<<<<< HEAD
- AST_commonwealth: "Commonwealth of Australia"
- AST_commonwealth_DEF: "the The Commonwealth of Australia"
-=======
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  AST_republic: "Republic of Australia"
  AST_republic_DEF: "the The Republic of Australia"
  
@@ -1497,11 +1477,6 @@
  
  HAW_kingdom: "Hawaiian Kingdom"
  HAW_kingdom_DEF: "the The Hawaiian Kingdom"
-<<<<<<< HEAD
- HAW_kingdom: "Hawaiian Kingdom"
- HAW_kingdom_DEF: "the The Hawaiian Kingdom"
-=======
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  HAW_republic: "Republic of Hawaii"
  HAW_republic_DEF: "the The Republic of Hawaii"
  
@@ -2229,6 +2204,9 @@
  ZHI_suweiai_government: "Zhili Soviet Goverment"
  ZHI_suweiai_government_DEF: "the The Zhili Soviet Goverment"
  
+ SUL_sultanate: "Sultanate of Sulu"
+ SUL_sultanate_DEF: "the The Sultanate of Sulu"
+ 
 #ヨーロッパ:
  AEG_federation: "Aegean Federation"
  AEG_federation_DEF: "the The Aegean Federation"
@@ -2428,11 +2406,6 @@
  
  GUE_bailiwick: "Bailiwick of Guernsey"
  GUE_bailiwick_DEF: "the The Bailiwick of Guernsey"
-<<<<<<< HEAD
- GUE_bailiwick: "Bailiwick of Guernsey"
- GUE_bailiwick_DEF: "the The Bailiwick of Guernsey"
-=======
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  GUE_republic: "Republic of Guernsey"
  GUE_republic_DEF: "the The Republic of Guernsey"
  
@@ -2477,11 +2450,6 @@
  
  JER_bailiwick: "Bailiwick of Jersey"
  JER_bailiwick_DEF: "the The Bailiwick of Jersey"
-<<<<<<< HEAD
- JER_bailiwick: "Bailiwick of Jersey"
- JER_bailiwick_DEF: "the The Bailiwick of Jersey"
-=======
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  JER_republic: "Republic of Jersey"
  JER_republic_DEF: "the The Republic of Jersey"
  
@@ -3063,13 +3031,8 @@
  SLC_republic: "Republic of Saint Lucia"
  SLC_republic_DEF: "the The Republic of Saint Lucia"
  
-<<<<<<< HEAD
- STM_republic: "Saint Martin"
- STM_republic_DEF: "the The Saint Martin"
-=======
  STM_republic: "Republic of Saint Martin"
  STM_republic_DEF: "the The Republic of Saint Martin"
->>>>>>> d9588007546816bb5b5a2c65914cbc8eb2ab5b25
  STM_union: "Union of Saint Martin"
  STM_union_DEF: "the The Union of Saint Martin"
  
